--- a/package.json
+++ b/package.json
@@ -11,17 +11,27 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.26",
     "expo-linking": "^6.3.1",
     "expo-router": "^3.5.21",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
