--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.17.3",
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
