--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.7.4",
     "expo": "~51.0.26",
     "expo-linking": "^6.3.1",
     "expo-router": "^3.5.21",
